Working with some enhancements